--- a/video.html
+++ b/video.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
         <div class="video">
-            <video src="dars.mp4" controls autoplay></video>
+            <video src="dars.mp4" controls autoplay loop></video>
         </div>
     </div>
 </body>
