--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="container">
         <div class="block">
             <a href="video.html">1-dars</a>
+            <h2>o'zgardi</h2>
         </div>
     </div>
 </body>
